--- a/index.html
+++ b/index.html
@@ -11,21 +11,6 @@
     <title>Course Page</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <div class="container">
-      <div class="card" style="width: 18rem;">
-        <h1>Full Stack</h11>
-        <h1>Web Development</h1>
-        <h1>Track</h1>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-    </div>
-    
-=======
-
     <div class="jumbotron">
       <div class="col-sm-5">
         <h1 class="display-5">Full Stack Web Development Track</h1>
@@ -36,7 +21,87 @@
       </div>
     </div>
 
-  <div class="container">
+<div class="card-deck">
+  <div class="container row">
+    <div class="card mx-auto d-block" style="width: 15rem;">
+      <div class="card-body col text-center">
+        <h4 class="card-title">Week 1-4</h4>
+        <p class="card-text">Web Foundation</p>
+        <br>
+        <img src="images/html5.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">HTML</label><br>
+        <img src="images/css3.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">CSS</label><br>
+        <img src="images/javascript-logo.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">Javascript</label><br>
+        <img src="images/git.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">Git</label>
+      </div>
+    </div>
+
+    <div class="card mx-auto d-block" style="width: 15rem;">
+      <div class="card-body col text-center">
+        <h4 class="card-title">Week 5-8</h4>
+        <p class="card-text">Web Application Development</p>
+        <br>
+        <img src="images/javascript.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">Javascript</label><br>
+        <img src="images/reactjs.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">React</label><br>
+        <img src="images/redux.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">Redux</label><br>
+        <li class="mt-2 mb-1">HTTP/AJAX</li>
+      </div>
+    </div>
+
+    <div class="card mx-auto d-block" style="width: 15rem;">
+      <div class="card-body col text-center">
+        <h4 class="card-title">Week 9-12</h4>
+        <p class="card-text">Back End Development</p>
+        <br>
+        <img src="images/javascript.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">Javascript</label><br>
+        <img src="images/reactjs.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">React</label><br>
+        <img src="images/redux.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">Redux</label><br>
+        <li class="mt-2 mb-1">HTTP/AJAX</li>
+      </div>
+    </div>
+
+    <div class="card mx-auto d-block" style="width: 15rem;">
+      <div class="card-body col text-center">
+        <h4 class="card-title">Week 13-16</h4>
+        <p class="card-text">Data Structures and Algorithms</p>
+        <br>
+        <img src="images/javascript.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">Javascript</label><br>
+        <img src="images/reactjs.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">React</label><br>
+        <img src="images/redux.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">Redux</label><br>
+        <li class="mt-2 mb-1">HTTP/AJAX</li>
+      </div>
+    </div>
+
+    <div class="card mx-auto d-block" style="width: 15rem;">
+      <div class="card-body col text-center">
+        <h4 class="card-title">Week 17-20</h4>
+        <p class="card-text">Masai Labs</p>
+        <br>
+        <img src="images/javascript.png" class="mr-3" width="40">
+        <label class="mt-2 mb-1">Javascript</label><br>
+        <img src="images/reactjs.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">React</label><br>
+        <img src="images/redux.png" class="mr-3" width="30">
+        <label class="mt-2 mb-1">Redux</label><br>
+        <li class="mt-2 mb-1">HTTP/AJAX</li>
+      </div>
+    </div>
+  </div>
+</div>
+
+ <!--  <div class="container">
     <h2 id="Education">CURICULAM</h2>
     <br>
     <div class="row">
@@ -68,11 +133,11 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 
->>>>>>> 19294858fa79761ffda46669b134ad7d520b6ba1
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
