--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <div class="col-sm-5">
+      <div>
         <h1 class="display-5">Full Stack Web Development Track</h1>
         <p class="lead">The best place to learn foundation of web development and Computer Science.</p>
         <p class="lead">20 weeks | 20 projects | 120 quiz | 135 Challenges | 20 Guest lectures by Industry experts
@@ -21,7 +21,124 @@
       </div>
     </div>
 
-<div class="card-deck">
+
+  <div class="container-fluid">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="card mx-auto d-block text-white bg-secondary mb-3" style="width: 25rem;">
+              <div class="card-body col text-center">
+                <h4 class="card-title">Week 1-4</h4>
+                <p class="card-text">Web Foundation</p>
+                <br>
+                <img src="images/html5.png" class="mr-3" width="40">
+                <label class="mt-2 mb-1">HTML</label><br>
+                <img src="images/css3.png" class="mr-3" width="40">
+                <label class="mt-2 mb-1">CSS</label><br>
+                <img src="images/javascript-logo.png" class="mr-3" width="30">
+                <label class="mt-2 mb-1">Javascript</label><br>
+                <img src="images/git.png" class="mr-3" width="40">
+                <label class="mt-2 mb-1">Git</label>
+              </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="card mx-auto d-block text-white bg-secondary mb-3" style="width: 25rem;">
+            <div class="card-body col text-center">
+              <h4 class="card-title">Week 5-8</h4>
+              <p class="card-text">Web Application Development</p>
+              <br>
+              <img src="images/javascript.png" class="mr-3" width="40">
+              <label class="mt-2 mb-1">Javascript</label><br>
+              <img src="images/reactjs.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">React</label><br>
+              <img src="images/redux.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">Redux</label><br>
+              <li class="mt-2 mb-1">HTTP/AJAX</li>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="card mx-auto d-block text-white bg-secondary mb-3" style="width: 25rem;">
+            <div class="card-body col text-center">
+              <h4 class="card-title">Week 5-8</h4>
+              <p class="card-text">Web Application Development</p>
+              <br>
+              <img src="images/javascript.png" class="mr-3" width="40">
+              <label class="mt-2 mb-1">Javascript</label><br>
+              <img src="images/reactjs.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">React</label><br>
+              <img src="images/redux.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">Redux</label><br>
+              <li class="mt-2 mb-1">HTTP/AJAX</li>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="card mx-auto d-block text-white bg-secondary mb-3" style="width: 25rem;">
+            <div class="card-body col text-center">
+              <h4 class="card-title">Week 5-8</h4>
+              <p class="card-text">Web Application Development</p>
+              <br>
+              <img src="images/javascript.png" class="mr-3" width="40">
+              <label class="mt-2 mb-1">Javascript</label><br>
+              <img src="images/reactjs.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">React</label><br>
+              <img src="images/redux.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">Redux</label><br>
+              <li class="mt-2 mb-1">HTTP/AJAX</li>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="card mx-auto d-block text-white bg-secondary mb-3" style="width: 25rem;">
+            <div class="card-body col text-center">
+              <h4 class="card-title">Week 5-8</h4>
+              <p class="card-text">Web Application Development</p>
+              <br>
+              <img src="images/javascript.png" class="mr-3" width="40">
+              <label class="mt-2 mb-1">Javascript</label><br>
+              <img src="images/reactjs.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">React</label><br>
+              <img src="images/redux.png" class="mr-3" width="30">
+              <label class="mt-2 mb-1">Redux</label><br>
+              <li class="mt-2 mb-1">HTTP/AJAX</li>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+<!-- <div class="card-deck">
   <div class="container row">
     <div class="card mx-auto d-block" style="width: 15rem;">
       <div class="card-body col text-center">
@@ -101,7 +218,7 @@
   </div>
 </div>
 
- <!--  <div class="container">
+  <div class="container">
     <h2 id="Education">CURICULAM</h2>
     <br>
     <div class="row">
@@ -133,7 +250,7 @@
         </ul>
       </div>
     </div>
-  </div> -->
+  </div> --> 
 
 
 
